tests/vendor/invalid/syntax/binary_increment.c
//tags: simple, increment
int main() {
    int a = 0;
    return a ++ 1;
}